apps/gitlab-operator/env/k3s-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: snippet-box
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "gitlab.cluster.edward.sydney"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gitlab
                port:
                  number: 80
